timecontrol style fixes